Mark platinum and gold as sold-out
Signed-off-by: doychin <doychin@dsoft-bg.com>